--- a/.github/workflows/docker-image_linds.yml
+++ b/.github/workflows/docker-image_linds.yml
@@ -19,7 +19,7 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to Docker Hub
+        name: Login 2 Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
