--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,14 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
+        name: Load environment variables from .env
+        run: |
+          set -o allexport
+          source .env
+          set +o allexport
+
+      # Now you can use the environment variables in subsequent steps
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
