--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,21 +19,17 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Load environment variables from .env
-        run: |
-          set -o allexport
-          source .env
-          set +o allexport
-
-      # Now you can use the environment variables in subsequent steps
-      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
+      # Add a step to reference the .env file
+      - name: Reference .env file
+        run: cp .env ./docker-compose/.env  # Adjust the paths as per your file structure
+
+      # Now build and push your Docker image
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
