--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,23 +9,22 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
+
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -33,16 +32,16 @@ jobs:
           push: true
           tags: sle09/284:latest
           env:
-            PLEX_URL: http://192.168.1.118:32400/
-            PLEX_TOKEN: 
+            PLEX_URL: "http://192.168.1.118:32400/"
+            PLEX_TOKEN: ${{ secrets.PLEX_TOKEN }}
             WRITE_MISSING_AS_CSV: 0
             ADD_PLAYLIST_POSTER: 1
             ADD_PLAYLIST_DESCRIPTION: 1
             APPEND_INSTEAD_OF_SYNC: 0
             SECONDS_TO_WAIT: 84000
-            SPOTIFY_CLIENT_ID: <your spotify client id>
-            SPOTIFY_CLIENT_SECRET: <your spotify client secret>
-            SPOTIFY_USER_ID: <your spotify user id>
-            SPOTIFY_PLAYLIST_SUFFIX: Spotify
-            DEEZER_USER_ID: <deezer user id>
-            DEEZER_PLAYLIST_ID: https://www.deezer.com/en/playlist/10484834882
+            SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
+            SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
+            SPOTIFY_USER_ID: ${{ secrets.SPOTIFY_USER_ID }}
+            SPOTIFY_PLAYLIST_SUFFIX: "Spotify"
+            DEEZER_USER_ID: ${{ secrets.DEEZER_USER_ID }}
+            DEEZER_PLAYLIST_ID: "https://www.deezer.com/en/playlist/10484834882"
