--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,41 +8,29 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    env:
+      ENV_VARIABLE_NAME: "your_value_here"
     steps:
-      - name: Checkout
+      -
+        name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up QEMU
+      -
+        name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
+      -
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
+      -
+        name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push
+      -
+        name: Build and push
         uses: docker/build-push-action@v4
-                  env:
-            PLEX_URL: "http://192.168.1.118:32400/"
-            PLEX_TOKEN: ""
-            WRITE_MISSING_AS_CSV: 0
-            ADD_PLAYLIST_POSTER: 1
-            ADD_PLAYLIST_DESCRIPTION: 1
-            APPEND_INSTEAD_OF_SYNC: 0
-            SECONDS_TO_WAIT: 84000
-            SPOTIFY_CLIENT_ID: ""
-            SPOTIFY_CLIENT_SECRET: ""
-            SPOTIFY_USER_ID: ""
-            SPOTIFY_PLAYLIST_SUFFIX: "Spotify"
-            DEEZER_USER_ID: ""
-            DEEZER_PLAYLIST_ID: "https://www.deezer.com/en/playlist/10484834882"
         with:
           context: .
-          platforms: |
-            linux/amd64,linux/arm64/v8,linux/arm/v7
+          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
           push: true
           tags: sle09/284:latest
