--- a/assets/docker-compose.yml
+++ b/assets/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
   plexist:
     container_name: plexist
-    image: gyarbij/plexist:latest
+    image: sle09/284:latest
     environment:
       - PLEX_URL=http://#.#.#.#:32400
       - PLEX_TOKEN=<your plex token>
